# EAG-V2

EAG_V2/Assignment 1/TabMemoryMonitor/: service_worker.js
EAG_V2/Assignment 2/code/: .env  main.py  pyproject.toml
EAG_V2/Assignment 2/my-twitter-feed/: popup.html
EAG_V2/Assignment 3/: pyproject.toml
EAG_V2/Assignment 3/Stock Agent Plugin/: README.md  background.js  config.txt  manifest.json  popup.css  popup.html  popup.js
EAG_V2/Assignment 3/python_version/: main.py
EAG_V2/Assignment 4/: example_mcp_server.py
EAG_V2/Assignment 4/OpenPaintWithLLM/: example2.py  talk2mcp-2.py
EAG_V2/Assignment 5/: cot_tools.py
EAG_V2/Assignment 5/Math_Agent/: .gitignore  README.md  math_solver.py  mcp_math_server.py  pyproject.toml
EAG_V2/Assignment_1/: .gitignore  README.md
EAG_V2/Assignment_1/TabMemoryMonitor/: popup.css
EAG_V2/Assignment_2/my-twitter-feed/: README.md  background.js  manifest.json  popup.js  style.css
EAG_V2/Assignment_3/Stock Agent Plugin/: popup.css
EAG_V2/Assignment_3/python_version/: test.ipynb
EAG_V2/Assignment_4/OpenPaintWithLLM/: talk2mcp-2.py
EAG_V2/Assignment_5/: cot_main.py  main.py  pyproject.toml
EAG_V2/Assignment_5/Math_Agent/: README.md  main.py  pyproject.toml
EAG_V2/Assignment_6/pydantic/: .gitignore  BUGFIX.md  COMPLETION_REPORT.md  INDEX.md  PROJECT_SUMMARY.md  PROMPT_EVALUATION.md  QUICKSTART.md  README.md  SETUP.md  WORKFLOW.md  action.py  decision_making.py  main.py  mcp_browser_server.py  memory.py  models.py  perception.py  pyproject.toml  verify_setup.py
TabMemoryMonitor/: manifest.json  popup.html  popup.js
(+2 files in other folders)
