[project]
name = "assignment-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.42.0",
    "mcp>=1.16.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]

[tool.uv.workspace]
members = [
    "Math_Agent",
]
